@@ -1,131 +1,0 @@
-@comment $NetBSD: PLIST,v 1.12 2009/06/14 17:59:08 joerg Exp $
-bin/comicthumb
-bin/comix
-man/man1/comicthumb.1
-man/man1/comix.1
-share/applications/comix.desktop
-share/comix/images/16x16/comix.png
-share/comix/images/comix.svg
-share/comix/images/comments.png
-share/comix/images/double-page.png
-share/comix/images/fitbest.png
-share/comix/images/fitheight.png
-share/comix/images/fitmanual.png
-share/comix/images/fitwidth.png
-share/comix/images/gimp-flip-horizontal.png
-share/comix/images/gimp-flip-vertical.png
-share/comix/images/gimp-rotate-180.png
-share/comix/images/gimp-rotate-270.png
-share/comix/images/gimp-rotate-90.png
-share/comix/images/gimp-thumbnails.png
-share/comix/images/gimp-transform.png
-share/comix/images/lens.png
-share/comix/images/library.png
-share/comix/images/manga.png
-share/comix/images/tango-add-bookmark.png
-share/comix/images/tango-archive.png
-share/comix/images/tango-enhance-image.png
-share/comix/images/tango-image.png
-share/comix/images/zoom.png
-share/comix/src/about.py
-share/comix/src/about.pyc
-share/comix/src/archive.py
-share/comix/src/archive.pyc
-share/comix/src/bookmark.py
-share/comix/src/bookmark.pyc
-share/comix/src/comix.py
-share/comix/src/comment.py
-share/comix/src/comment.pyc
-share/comix/src/constants.py
-share/comix/src/constants.pyc
-share/comix/src/cursor.py
-share/comix/src/cursor.pyc
-share/comix/src/deprecated.py
-share/comix/src/deprecated.pyc
-share/comix/src/edit.py
-share/comix/src/edit.pyc
-share/comix/src/encoding.py
-share/comix/src/encoding.pyc
-share/comix/src/enhance.py
-share/comix/src/enhance.pyc
-share/comix/src/event.py
-share/comix/src/event.pyc
-share/comix/src/filechooser.py
-share/comix/src/filechooser.pyc
-share/comix/src/filehandler.py
-share/comix/src/filehandler.pyc
-share/comix/src/histogram.py
-share/comix/src/histogram.pyc
-share/comix/src/icons.py
-share/comix/src/icons.pyc
-share/comix/src/image.py
-share/comix/src/image.pyc
-share/comix/src/labels.py
-share/comix/src/labels.pyc
-share/comix/src/lens.py
-share/comix/src/lens.pyc
-share/comix/src/library.py
-share/comix/src/library.pyc
-share/comix/src/librarybackend.py
-share/comix/src/librarybackend.pyc
-share/comix/src/main.py
-share/comix/src/main.pyc
-share/comix/src/portability.py
-share/comix/src/portability.pyc
-share/comix/src/preferences.py
-share/comix/src/preferences.pyc
-share/comix/src/process.py
-share/comix/src/process.pyc
-share/comix/src/properties.py
-share/comix/src/properties.pyc
-share/comix/src/recent.py
-share/comix/src/recent.pyc
-share/comix/src/slideshow.py
-share/comix/src/slideshow.pyc
-share/comix/src/status.py
-share/comix/src/status.pyc
-share/comix/src/thumbbar.py
-share/comix/src/thumbbar.pyc
-share/comix/src/thumbnail.py
-share/comix/src/thumbnail.pyc
-share/comix/src/thumbremover.py
-share/comix/src/thumbremover.pyc
-share/comix/src/ui.py
-share/comix/src/ui.pyc
-share/icons/hicolor/16x16/apps/comix.png
-share/icons/hicolor/16x16/mimetypes/application-x-cbr.png
-share/icons/hicolor/16x16/mimetypes/application-x-cbt.png
-share/icons/hicolor/16x16/mimetypes/application-x-cbz.png
-share/icons/hicolor/22x22/apps/comix.png
-share/icons/hicolor/22x22/mimetypes/application-x-cbr.png
-share/icons/hicolor/22x22/mimetypes/application-x-cbt.png
-share/icons/hicolor/22x22/mimetypes/application-x-cbz.png
-share/icons/hicolor/24x24/apps/comix.png
-share/icons/hicolor/24x24/mimetypes/application-x-cbr.png
-share/icons/hicolor/24x24/mimetypes/application-x-cbt.png
-share/icons/hicolor/24x24/mimetypes/application-x-cbz.png
-share/icons/hicolor/32x32/apps/comix.png
-share/icons/hicolor/32x32/mimetypes/application-x-cbr.png
-share/icons/hicolor/32x32/mimetypes/application-x-cbt.png
-share/icons/hicolor/32x32/mimetypes/application-x-cbz.png
-share/icons/hicolor/48x48/apps/comix.png
-share/icons/hicolor/48x48/mimetypes/application-x-cbr.png
-share/icons/hicolor/48x48/mimetypes/application-x-cbt.png
-share/icons/hicolor/48x48/mimetypes/application-x-cbz.png
-share/icons/hicolor/scalable/apps/comix.svg
-share/locale/ca/LC_MESSAGES/comix.mo
-share/locale/cs/LC_MESSAGES/comix.mo
-share/locale/es/LC_MESSAGES/comix.mo
-share/locale/fr/LC_MESSAGES/comix.mo
-share/locale/hr/LC_MESSAGES/comix.mo
-share/locale/hu/LC_MESSAGES/comix.mo
-share/locale/id/LC_MESSAGES/comix.mo
-share/locale/ja/LC_MESSAGES/comix.mo
-share/locale/ko/LC_MESSAGES/comix.mo
-share/locale/pl/LC_MESSAGES/comix.mo
-share/locale/pt_BR/LC_MESSAGES/comix.mo
-share/locale/ru/LC_MESSAGES/comix.mo
-share/locale/sv/LC_MESSAGES/comix.mo
-share/locale/zh_CN/LC_MESSAGES/comix.mo
-share/locale/zh_TW/LC_MESSAGES/comix.mo
-share/mime/packages/comix.xml
