@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.18 2021/10/26 10:46:03 nia Exp $
-
-BLAKE2s (comix-4.0.4.tar.gz) = 59a28d97f656f3af810c7ec1a1c06acf526d8ea0e7031cd12bc92226fb515cb6
-SHA512 (comix-4.0.4.tar.gz) = 9cbc5b1cc100ee50b48b794ce9a7f08130fc7a79376533f0f55904be0e2e8cfe5f8b1deeff2f76e7038a3f81b0f709ce5eea88a709199e1584b73f5259df5f8e
-Size (comix-4.0.4.tar.gz) = 481687 bytes
