@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2517 2024/04/17 12:22:17 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2518 2024/04/17 12:33:53 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4171,3 +4171,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed databases/gourmet [wiz 2024-04-17]
 	Removed devel/diffuse [wiz 2024-04-17]
 	Updated devel/libappindicator to 12.10.0nb24 [wiz 2024-04-17]
+	Removed graphics/comix successor graphics/py-mcomix [wiz 2024-04-17]
